Remove the page-footer

--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Maitree:wght@400;700&display=swap" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<link
 				rel="shortcut icon"
 				href="img/favicon.png">
@@ -23,28 +20,9 @@
 		
  </header>
  <div class="container">
-	<script src="js/scripts.js">
-	</script>
+    <script src="js/scripts.js">
+    </script>
 </div>
- <footer class="page-footer">
-	<p>Find me on</p>
-	<div class="social-media">
-	<a href="https://github.com/" target="_blank">
-		<img src="img/github_icon.svg" alt="github icon">
-	</a>
-	<a href="https://twitter.com/home" target="_blank">
-		<img src="img/twitter_icon.svg" alt="blue twitter icon">
-	</a>
-	<a
-		href="https://www.linkedin.com/in/rina-shinn-md-7592931b/"
-		target="_blank"
-	>
-		<img src="img/linkedin_icon.svg" alt="blue linkedin icon">
-	</a>
-	</div>
-</footer>
-<script src="js/tota11y.min.js"></script>
-	
 </body>
 
 </html>
