--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
 		
  </header>
  <div class="container">
+	  <h1>Pokedex</h1>
+		<ul class="pokemon-list"></ul>
     <script src="js/scripts.js">
     </script>
 </div>
+<script src="js/tota11y.min.js"></script>
 </body>
 
 </html>
