--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
  <div class="container">
 	  <h1>Pokedex</h1>
 		<ul class="pokemon-list"></ul>
-    <script src="js/scripts.js">
-    </script>
-</div>
-<script src="js/tota11y.min.js"></script>
+		<script src="js/promise-polyfill.js"></script>
+		<script src="js/fetch-polyfill.js"></script>
+    <script src="js/scripts.js"></script>
+ </div>
 </body>
 
 </html>
