--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 		</header>
 
 		<div class="container">
-			<h1>Pokedex</h1>
-			<input type="text" placeholder="Search Pokemons" id="filter_pokemons"/>
+			<h1>POKEDEX</h1>
 			<ul class="pokemon-list">
 				<li class="pokemon-item"></li>
 			</ul>
+			<div id="modal-container">
+			</div>
 			<script src="js/promise-polyfill.js"></script>
 			<script src="js/fetch-polyfill.js"></script>
 			<script src="js/scripts.js"></script>
