--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link	rel="stylesheet" type="text/css"
           href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
 
-    <link rel="stylesheet" type="text/css" href="css/styles.css">	
+    <link rel="stylesheet" type="text/css" href="dist/styles.css">	
 </head>
 
 <body>
@@ -78,7 +78,7 @@
 		<script src="js/scripts.js"></script>
 
 <!--For Accessibility-->
-		<script src="js/tota11y.min.js"></script>         
+		<script src="dist/scripts.js"></script>         
 </body>
 
 </html>
