--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
 		<script src="js/promise-polyfill.js"></script>
 		<script src="js/fetch-polyfill.js"></script>
 		
-		<script src="js/scripts.js"></script>
-
-<!--For Accessibility-->
+		<!--For Accessibility-->
+    <script src="js/tota11y.min.js"></script>
 		<script src="dist/scripts.js"></script>         
 </body>
 
